--- a/brumstaxi/AndroidManifest.xml
+++ b/brumstaxi/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:label="@string/app_name" android:name=".Booktaxi" android:screenOrientation="portrait" ></activity>
         <activity android:label="@string/app_name" android:name=".BookTaxiResponse" android:screenOrientation="portrait" ></activity>
         <activity android:label="@string/app_name" android:name=".Quote" android:screenOrientation="portrait" ></activity>
+        <activity android:label="@string/app_name" android:name=".RegistrationResponse" android:screenOrientation="portrait" ></activity>
         <receiver
             android:name="com.anaadih.brumstaxi.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
