--- a/brumstaxi/AndroidManifest.xml
+++ b/brumstaxi/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="13"
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,9 +14,19 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    
+    <permission
+        android:name="com.anaadih.brumstaxi.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+ 
+    <uses-permission android:name="com.anaadih.brumstaxi.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
     <permission android:name="com.anaadih.brumstaxi.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
+            android:protectionLevel="signature" />
     <uses-permission android:name="com.anaadih.brumstaxi.permission.C2D_MESSAGE" />
 
     <application
@@ -53,5 +63,8 @@
             </intent-filter>
         </receiver>
         <service android:name="com.anaadih.brumstaxi.GcmIntentService" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBWDJPNhERzr-U0kPxsqtnMfdTFFSYdByQ"/>
     </application>
 </manifest>
