Add the Number Picker Dialog box and other code

--- a/brumstaxi/AndroidManifest.xml
+++ b/brumstaxi/AndroidManifest.xml
@@ -33,13 +33,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black.NoTitleBar"
+         >
         <meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.anaadih.brumstaxi.MainActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,6 +54,7 @@
         <activity android:label="@string/app_name" android:name=".BookTaxiResponse" android:screenOrientation="portrait" ></activity>
         <activity android:label="@string/app_name" android:name=".Quote" android:screenOrientation="portrait" ></activity>
         <activity android:label="@string/app_name" android:name=".RegistrationResponse" android:screenOrientation="portrait" ></activity>
+        <activity android:label="@string/app_name" android:name=".ConfirmFare" android:screenOrientation="portrait" ></activity>
         <receiver
             android:name="com.anaadih.brumstaxi.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -68,3 +70,4 @@
             android:value="AIzaSyBWDJPNhERzr-U0kPxsqtnMfdTFFSYdByQ"/>
     </application>
 </manifest>
+<!-- android:theme="@style/AppTheme" -->
