--- a/MainDriver/project.properties
+++ b/MainDriver/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../android-support-v7-appcompat
-android.library.reference.2=../EditTextFormLibrary
-android.library.reference.3=../google-play-services_lib
+android.library.reference.1=../../../../../var/www/android-support-v7-appcompat
+android.library.reference.2=../../../../../var/www/EditTextFormLibrary
+android.library.reference.3=../../../../../var/www/google-play-services_lib
